# llm-serving-bench

./: .gitignore  README.md  pyproject.toml
configs/: benchmark_matrix.yaml  full_matrix.yaml  quick_matrix.yaml  vllm_only.yaml
docker/: sglang.Dockerfile  trtllm.Dockerfile  vllm.Dockerfile
docs/superpowers/plans/: 2026-06-29-llm-serving-bench.md
docs/superpowers/specs/: 2026-06-29-llm-serving-bench-design.md
notebooks/: analysis.ipynb
results/20260630_084730_466d2519/vllm/0b641e5f9731/: error.txt
results/20260630_084730_466d2519/vllm/25331bd18b25/: config.json
results/20260630_084730_466d2519/vllm/5209f40a0b56/: config.json
results/analysis/: combined_results.parquet  summary.csv
scripts/: runpod_setup.sh  setup_models.sh  test_server.sh
src/llm_bench/: cli.py
src/llm_bench/analysis/: export.py  plots.py  stats.py
src/llm_bench/config/: matrix.py  schema.py
src/llm_bench/engines/: base.py  factory.py  sglang.py  trtllm.py  vllm.py
src/llm_bench/profiling/: gpu_monitor.py  metrics.py  nsight.py  parser.py
src/llm_bench/runner/: executor.py  orchestrator.py
src/llm_bench/workloads/: datasets.py  generator.py  patterns.py
tests/: test_cli.py
tests/analysis/: test_export.py  test_plots.py  test_stats.py
tests/config/: test_matrix.py  test_schema.py
tests/engines/: test_factory.py  test_sglang.py  test_trtllm.py  test_vllm.py
tests/profiling/: test_gpu_monitor.py  test_metrics.py  test_nsight.py  test_parser.py
tests/runner/: test_executor.py  test_orchestrator.py
tests/workloads/: test_datasets.py  test_patterns.py
(+229 files in other folders)
