[project]
name = "llm-bench"
version = "0.1.0"
description = "Benchmark suite comparing TensorRT-LLM, vLLM, and SGLang serving engines"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "docker>=7.0",
    "pynvml>=11.5",
    "numpy>=1.26",
]

[project.scripts]
bench = "llm_bench.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_bench"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
